--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.6.0.jre8</version>
+        </dependency>
     </dependencies>
 
     <build>
